--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -31,9 +31,7 @@
 
         <article id="search-engine-optimization">
 
-            <figure>
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            </figure>
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
             <p>
@@ -43,9 +41,7 @@
 
         <article id="online-reputation-management" class="online-reputation-management">
 
-            <figure>
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            </figure>
+            <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management" class="float-right" />
 
             <h2>Online Reputation Management</h2>
             <p>
@@ -55,9 +51,7 @@
 
         <article id="social-media-marketing" class="social-media-marketing">
 
-            <figure>
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            </figure>
+            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
 
             <h2>Social Media Marketing</h2>
             <p>
@@ -71,9 +65,7 @@
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
 
-            <figure>
-                <img src="./assets/images/lead-generation.png" />
-            </figure>
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation" />
 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -83,9 +75,7 @@
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
 
-            <figure>
-                <img src="./assets/images/brand-awareness.png" />
-            </figure>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
 
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -95,9 +85,7 @@
         <article class="benefit-cost">
             <h3>Cost Management</h3>
 
-            <figure>
-                <img src="./assets/images/cost-management.png"></img>
-            </figure>
+            <img src="./assets/images/cost-management.png" alt="Cost Management">
 
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
